# github-visualizer

./: .gitignore  README.md  github_contributions_svg.py  pyproject.toml
.github/: copilot-instructions.md
.github/skills/python-rest-docstrings/: SKILL.md
.github/workflows/: tests.yml
src/github_visualizer/: github_fetch.py  main.py  svg.py
tests/: test_coloring.py  test_interval.py
